--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Events</a>
+            <a href="#">Blog</a>
             <a href="#">Join Now</a>
             <span class="material-symbols-outlined menu" onclick="nav()">menu</span>
         </div>
@@ -29,15 +30,18 @@
         <a class="moba" href="#">Home</a>
         <a class="moba1" href="#">About</a>
         <a class="moba2" href="#">Events</a>
+        <a class="moba4" href="#">Blog</a>
         <a class="moba3" href="#">Join Now</a>
     </div>
     <div class="hom-sec">
         <div class="home">
             <h2>Advancing Technology<br>for benifit of Humanity</h2>
-            <p>IEEE's core purpose is to<br> foster technological innovation and<br> excellence for the benefit of
+            <p>IEEE's core purpose is to<br> foster technological innovation & <br> excellence for the benefit of
                 humanity.</p>
             <div class="btn">
-                <h3>Join</h3>
+                <p>explore now</p><h3>-></h3>
+                <!-- HTML !-->
+                <!-- <button class="button-17" role="button">JOIN NOW</button> -->
             </div>
         </div>
         <svg data-name="Vector Graphics" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 386 444" height="100%">
@@ -108,9 +112,7 @@
             community, the association supports technological innovation for the benefit of humanity. Through member
             collaboration and the association's diverse selection of publications, conferences, educational resources,
             and standards development, IEEE advances innovation and technological excellence while inspiring future
-            generations.Adherence to our identity guidelines is the first step to a unified and recognizable brand
-            experience and goes directly to the value of our brand. By downloading any of the Toolkit's contents, users
-            are agreeing to abide by the</p>
+            generations.</p>
 
         <h3>learn more at <a href="https://www.ieee.org//">ieee.org</a></h3> <br><br>
 
@@ -138,8 +140,7 @@
                 <h2>IEEE AT VIIT</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla fugiat, numquam error voluptas
                     laudantium aperiam accusamus aut. Repudiandae aliquid aliquam a reiciendis, odio mollitia error
-                    aperiam, ipsam quos tempore enim, consequuntur deserunt ratione perspiciatis consequatur dolore
-                    quibusdam! Molestiae, dolorum consectetur deleniti excepturi vitae quidem dolore porro soluta.
+                    aperiam, ipsam quos tempore enim, consequuntur deserunt ratione 
                     Debitis, ab porro!</p>
                 <h2>Our Mission</h2>
                 <p>IEEE's core purpose is to foster technological innovation and excellence for the benefit of humanity.
