--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             <p>IEEE's core purpose is to<br> foster technological innovation & <br> excellence for the benefit of
                 humanity.</p>
             <div class="btn">
-                <p>explore now</p><h3>-></h3>
+                <p>explore now</p><h3><span class="material-symbols-outlined">
+                    arrow_forward
+                    </span></h3>
                 <!-- HTML !-->
                 <!-- <button class="button-17" role="button">JOIN NOW</button> -->
             </div>
@@ -179,8 +181,7 @@
                         <img src="https://images.prismic.io/ieeemuj/569c4268-813a-470d-8ffa-2de20ddb32c0_Error+Terror.png?auto=compress,format&rect=0,327,1587,1587&w=320&h=320"
                             alt="">
                         <div class="des">
-                            <h4>IEEE VIIT</h4>
-                            <h1>TECH FEST</h1>
+                            <h4>TECH FEST BY VIIT</h4>
                         </div>
                     </div>
                 </div>
@@ -189,8 +190,7 @@
                         <img src="https://images.prismic.io/ieeemuj/569c4268-813a-470d-8ffa-2de20ddb32c0_Error+Terror.png?auto=compress,format&rect=0,327,1587,1587&w=320&h=320"
                             alt="">
                         <div class="des">
-                            <h4>IEEE VIIT</h4>
-                            <h1>TECH FEST</h1>
+                            <h4>EVENT NAME</h4>
                         </div>
                     </div>
                 </div>
@@ -199,8 +199,7 @@
                         <img src="https://images.prismic.io/ieeemuj/569c4268-813a-470d-8ffa-2de20ddb32c0_Error+Terror.png?auto=compress,format&rect=0,327,1587,1587&w=320&h=320"
                             alt="">
                         <div class="des">
-                            <h4>IEEE VIIT</h4>
-                            <h1>TECH FEST</h1>
+                            <h4>EVENT NAME</h4>
                         </div>
                     </div>
                 </div>
@@ -209,8 +208,7 @@
                         <img src="https://images.prismic.io/ieeemuj/569c4268-813a-470d-8ffa-2de20ddb32c0_Error+Terror.png?auto=compress,format&rect=0,327,1587,1587&w=320&h=320"
                             alt="">
                         <div class="des">
-                            <h4>IEEE VIIT</h4>
-                            <h1>TECH FEST</h1>
+                            <h4>EVENT NAME</h4>
                         </div>
                     </div>
                 </div>
@@ -219,8 +217,7 @@
                         <img src="https://images.prismic.io/ieeemuj/569c4268-813a-470d-8ffa-2de20ddb32c0_Error+Terror.png?auto=compress,format&rect=0,327,1587,1587&w=320&h=320"
                             alt="">
                         <div class="des">
-                            <h4>IEEE VIIT</h4>
-                            <h1>TECH FEST</h1>
+                            <h4>EVENT NAME</h4>
                         </div>
                     </div>
                 </div>
@@ -229,8 +226,7 @@
                         <img src="https://images.prismic.io/ieeemuj/569c4268-813a-470d-8ffa-2de20ddb32c0_Error+Terror.png?auto=compress,format&rect=0,327,1587,1587&w=320&h=320"
                             alt="">
                         <div class="des">
-                            <h4>IEEE VIIT</h4>
-                            <h1>TECH FEST</h1>
+                            <h4>EVENT NAME</h4>
                         </div>
                     </div>
                 </div>
@@ -246,22 +242,22 @@
         <div class="blog">
             <img src="https://images.prismic.io/ieeemuj/a818858f-0d1d-4d80-8ab9-f670da64a668_ElecricCarBlogCover.png?auto=compress,format&rect=0,4,362,209&w=250&h=144" alt="">
             <div class="blog-des">
-                <h1>Are electric cars here to stay?</h1>
-                <p>With the global threats of termination of oils, technology gives a majority of its attention at finding alternatives to sustain the standard of living without any sort of compensation. One such product of this contemplation is the electric car. Yep, they are as cool as they sound.</p>
+                <h1>Are electric cars here to stay ?</h1>
+                <p>With the global threats of termination of oils, technology gives a majority of its attention at finding alternatives to sustain </p>
             </div>
         </div>
         <div class="blog">
             <img src="https://images.prismic.io/ieeemuj/a818858f-0d1d-4d80-8ab9-f670da64a668_ElecricCarBlogCover.png?auto=compress,format&rect=0,4,362,209&w=250&h=144" alt="">
             <div class="blog-des">
                 <h1>Are electric cars here to stay?</h1>
-                <p>With the global threats of termination of oils, technology gives a majority of its attention at finding alternatives to sustain the standard of living without any sort of compensation. One such product of this contemplation is the electric car. Yep, they are as cool as they sound.</p>
+                <p>With the global threats of termination of oils, technology gives a majority of its attention at finding alternatives to sustain </p>
             </div>
         </div>
         <div class="blog">
             <img src="https://images.prismic.io/ieeemuj/a818858f-0d1d-4d80-8ab9-f670da64a668_ElecricCarBlogCover.png?auto=compress,format&rect=0,4,362,209&w=250&h=144" alt="">
             <div class="blog-des">
                 <h1>Are electric cars here to stay?</h1>
-                <p>With the global threats of termination of oils, technology gives a majority of its attention at finding alternatives to sustain the standard of living without any sort of compensation. One such product of this contemplation is the electric car. Yep, they are as cool as they sound.</p>
+                <p>With the global threats of termination of oils, technology gives a majority of its attention at finding alternatives to sustain </p>
             </div>
         </div>
     </div>
@@ -294,7 +290,7 @@
     <!-- =============== 1.9 Contact Area End ====================-->
     <!-- =============== 1.9 Footer Area Start ====================-->
     <footer>
-        <p>Copyright &copy; 2019 IEEE VIIT All Rights Reserved.</p>
+        <p>Copyright &copy; 2019 EVENT NAME All Rights Reserved.</p>
     </footer>
 
 </body>
@@ -320,12 +316,12 @@
               spaceBetween: 20
             },
             // when window width is >= 480px
-            620: {
+            800: {
               slidesPerView: 2,
-              spaceBetween: 50
+              spaceBetween: 5
             },
             // when window width is >= 640px
-            1000: {
+            1200: {
               slidesPerView: 3,
               spaceBetween: 10
             }
